src/acl/snapshots/portail__acl__parser__tests__deny_templates.snap
---
source: src/acl/parser.rs
expression: rules
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "deny_all",
                attributes: [
                    Action(
                        Deny(
                            Some(
                                "explain/global-deny.html",
                            ),
                        ),
                    ),
                ],
            },
        ),
    ],
}
