src/acl/snapshots/portail__acl__parser__tests__deny_with_template.snap
---
source: src/acl/parser.rs
expression: result.unwrap()
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "main",
                attributes: [
                    Action(
                        Deny(
                            Some(
                                "/tmp/my-explain.html",
                            ),
                        ),
                    ),
                ],
            },
        ),
    ],
}
