src/acl/snapshots/portail__acl__parser__tests__dup_action.snap
---
source: src/acl/parser.rs
expression: result.unwrap()
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "main",
                attributes: [
                    Action(
                        Allow,
                    ),
                    Action(
                        Deny(
                            None,
                        ),
                    ),
                ],
            },
        ),
    ],
}
