src/acl/snapshots/portail__acl__parser__tests__dup_policies.snap
---
source: src/acl/parser.rs
expression: result.unwrap()
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "main",
                attributes: [
                    Action(
                        Allow,
                    ),
                ],
            },
        ),
        Policy(
            PolicyBlock {
                name: "main",
                attributes: [
                    Action(
                        Deny(
                            None,
                        ),
                    ),
                ],
            },
        ),
    ],
}
