src/acl/snapshots/portail__acl__parser__tests__dup_when.snap
---
source: src/acl/parser.rs
expression: result.unwrap()
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "main",
                attributes: [
                    When(
                        Comparison(
                            Identifier(
                                "host",
                            ),
                            Regex,
                            Regex(
                                Regex(
                                    ".*",
                                ),
                            ),
                        ),
                    ),
                    When(
                        Comparison(
                            DottedIdentifier(
                                [
                                    "user",
                                    "authenticated",
                                ],
                            ),
                            Eq,
                            Boolean(
                                true,
                            ),
                        ),
                    ),
                    Action(
                        Allow,
                    ),
                ],
            },
        ),
    ],
}
