src/acl/snapshots/portail__acl__parser__tests__empty_policy_block.snap
---
source: src/acl/parser.rs
expression: result.unwrap()
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "main",
                attributes: [],
            },
        ),
    ],
}
