src/acl/snapshots/portail__acl__parser__tests__explain_action.snap
---
source: src/acl/parser.rs
expression: rules
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "explain_policy",
                attributes: [
                    When(
                        Comparison(
                            DottedIdentifier(
                                [
                                    "user",
                                    "authenticated",
                                ],
                            ),
                            Eq,
                            Boolean(
                                true,
                            ),
                        ),
                    ),
                    Action(
                        Explain(
                            "deny-employee.html",
                        ),
                    ),
                ],
            },
        ),
    ],
}
